<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="UnusedAttribute">

    <ImageButton
        android:id="@+id/promote_to_queen"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/queen"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:tooltipText="@string/queen" />

    <ImageButton
        android:id="@+id/promote_to_rook"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/rook"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:tooltipText="@string/rook" />

    <ImageButton
        android:id="@+id/promote_to_knight"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/knight"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:tooltipText="@string/knight" />

    <ImageButton
        android:id="@+id/promote_to_bishop"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/bishop"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:tooltipText="@string/bishop" />
</LinearLayout>